# limes-autoresearch

./: .gitignore  README.md  UPSTREAMS.md  program.md  pyproject.toml
autoresearch_limes/: __init__.py  __main__.py  adapters.py  backends.py  config.py  ledger.py  protocol.py  report.py  runner.py  spec.py
docs/: architecture.md  research-agenda.md
docs/templates/: no_cheating_protocol.md  protocol_task_state.md  research_question_spec.json  result_artifact.json
examples/: mock_config.json  mock_experiment.py  ppo_grpo_research_spec.json
skills/limes-autoresearch/: SKILL.md
skills/limes-autoresearch/agents/: openai.yaml
tests/: test_adapters.py  test_backends.py  test_cli.py  test_config.py  test_ledger.py  test_metadata.py  test_protocol.py  test_reports.py  test_research_spec.py  test_runner.py
